--- a/DC-UBP-Actividad1.html
+++ b/DC-UBP-Actividad1.html
@@ -35,17 +35,15 @@ tw-passage img {
 
 
 
-[[ &lt;img src=&quot;drawing-1.jpeg&quot; max-height=&quot;150px&quot; max-width=150px&quot; class=&quot;responsive&quot;&gt; -&gt; Fotografia]]
+[[ Fotografia -&gt; Fotografia]]
 
+[[ Amigo Virtual -&gt; Amigo Virtual]]
 
-[[ &lt;img src=&quot;drawing-1.jpeg&quot; max-height=&quot;150px&quot; max-width=150px&quot; class=&quot;responsive&quot;&gt; -&gt; Amigo Virtual]]
+[[ Reto de selfies -&gt; Reto de selfies]]
 
-[[ &lt;img src=&quot;drawing-1.jpeg&quot; max-height=&quot;150px&quot; max-width=150px&quot; class=&quot;responsive&quot;&gt; -&gt; Reto de selfies]]
+[[ Oferta Irresistible -&gt; Oferta Irresistible]]
 
-[[&lt;img src=&quot;drawing-1.jpeg&quot; max-height=&quot;150px&quot; max-width=150px&quot; class=&quot;responsive&quot;&gt;Oferta Irresistible -&gt; Oferta Irresistible]]
-
-
-[[&lt;img src=&quot;drawing-1.jpeg&quot; max-height=&quot;150px&quot; max-width=150px&quot; class=&quot;responsive&quot;&gt;e -&gt; Noticias]]
+[[ Noticias -&gt; Noticias]]
 </tw-passagedata><tw-passagedata pid="3" name=" Dejar de subir fotos" tags="" position="300,625" size="100,100">
 
 &lt;img src=&quot;drawing-3.jpg&quot; width=&quot;400px&quot; height=&quot;400px&quot; class=&quot;responsive&quot;&gt;
