--- a/DC-UBP-Actividad1.html
+++ b/DC-UBP-Actividad1.html
@@ -25,7 +25,28 @@ tw-passage img {
   max-width: 400px;
   height: auto;
 }
-</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Introduccion" tags="" position="950,100" size="200,100">Introduccion a la actividad, consignas, como elegir opciones, etc.
+
+
+tw-story {
+ background-image:url("Backgrounds/bg-1.jpg");
+ background-size:cover;
+ background-color: white;
+ color: black;
+}
+
+.cuestionario-fondo
+{
+  background-color: rgb(150, 150, 150, 0.5);
+
+}
+
+.cuestionario-texto
+{
+  padding-top: 5%;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 5%;
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Introduccion" tags="" position="950,100" size="200,100">Introduccion a la actividad, consignas, como elegir opciones, etc.
 
 
 [[Historias-&gt;Historias]]
@@ -44,6 +65,7 @@ tw-passage img {
 [[ Oferta Irresistible -&gt; Oferta Irresistible]]
 
 [[ Noticias -&gt; Noticias]]
+
 </tw-passagedata><tw-passagedata pid="3" name=" Dejar de subir fotos" tags="" position="300,625" size="100,100">
 
 &lt;img src=&quot;drawing-3.jpg&quot; width=&quot;400px&quot; height=&quot;400px&quot; class=&quot;responsive&quot;&gt;
@@ -62,12 +84,17 @@ Sofía empezó a sentirse atrapada. Dejaba de subir fotos y evitaba mirar su per
 
 [[Bloquear a las personas que hacen comentarios agresivos-&gt;Bloquear]]
 [[Dejar de subir fotos-&gt; Dejar de subir fotos]]
-[[Hablar con un adulto -&gt; Hablar con un adulto]]</tw-passagedata><tw-passagedata pid="5" name=" Hablar con un adulto" tags="" position="200,1000" size="100,100">Sofía decidió contarle a su madre. Con lágrimas en los ojos, le mostró los mensajes y le explicó cómo se sentía. Su madre la abrazó y le prometió que iban a superar esto juntas. Contactaron con el colegio y denunciaron los mensajes a la red social.
+[[Hablar con un adulto -&gt; Hablar con un adulto]]</tw-passagedata><tw-passagedata pid="5" name=" Hablar con un adulto" tags="" position="125,1000" size="100,100">Sofía decidió contarle a su madre. Le mostró los mensajes y le explicó cómo se sentía. Su madre la abrazó y le prometió que iban a superar esto juntas. Contactaron con el colegio y denunciaron los mensajes a la red social.
 
-Poco a poco, con el apoyo de su familia, amigos y Clara, Sofía empezó a recuperar su confianza. Volvió a tomar fotos y a compartirlas, esta vez sin miedo. Comprendió que, aunque siempre habrá personas que intenten derrumbarte, también hay muchas otras dispuestas a ayudarte a levantarte.
+Poco a poco, con el apoyo de su familia, amigos y Clara, Sofía empezó a recuperar su confianza. Volvió a tomar fotos y a compartirlas, esta vez sin miedo. 
 
 
 
+
+
+
+(b4r-colour:green)+(b4r:&quot;outset&quot;)+(b4r-size:5)
+[&lt;div class=&quot;cuestionario-fondo&quot;&gt;&lt;div class=&quot;cuestionario-texto&quot;&gt;
 Cuestionario Final:
 
 ¿Teniendo en cuenta el rol del AT, que estrategias se pueden utilizar para abordar dicha problemática? Explicar.
@@ -80,19 +107,19 @@ Cuestionario Final:
 
 ¿A modo de cierre, como se sintieron durante el recorrido de la historia interactiva?
  Qué emociones pudieron vivenciar?
+]
+&lt;/div&gt;
+&lt;/div&gt;
 
 
-
-
-
-[[Empezar-&gt;Historias]]</tw-passagedata><tw-passagedata pid="6" name="Bloquear" tags="" position="100,775" size="100,100">Sofia empezó a usar las opciones del programa para bloquear los mensajes más crueles. Pero como Internet puede ser usado de mala maneral, muchos de los mensajes negativos llegaban de usuarios anónimos, y bloquear algunos no era suficiente. 
+[[Historias-&gt;Historias]]</tw-passagedata><tw-passagedata pid="6" name="Bloquear" tags="" position="100,775" size="100,100">Sofia empezó a usar las opciones del programa para bloquear los mensajes más crueles. Pero como Internet puede ser usado de mala maneral, muchos de los mensajes negativos llegaban de usuarios anónimos, y bloquear algunos no era suficiente. 
 
 
 ¿Qué debería hacer Sofia?
 
 
 [[Dejar de subir fotos-&gt; Dejar de subir fotos]]
-[[Hablar con un adulto -&gt; Hablar con un adulto]]</tw-passagedata><tw-passagedata pid="7" name=" Amigo Virtual" tags="" position="650,375" size="100,100">Lucía tenía catorce años y era una chica extrovertida, apasionada por la música. Como muchos adolescentes, pasaba mucho tiempo en línea, especialmente en foros y redes sociales donde compartía sus intereses y conocía a personas con pasiones similares.
+[[Hablar con un adulto -&gt; Hablar con un adulto]]</tw-passagedata><tw-passagedata pid="7" name=" Amigo Virtual" tags="" position="625,400" size="100,100">Lucía tenía catorce años y era una chica extrovertida, apasionada por la música. Como muchos adolescentes, pasaba mucho tiempo en línea, especialmente en foros y redes sociales donde compartía sus intereses y conocía a personas con pasiones similares.
  
 Un día, mientras navegaba por un foro de música, recibió un mensaje privado de un usuario llamado &quot;Melodía96&quot;. El perfil decía que era un chico de quince años, amante de las mismas bandas de música que Lucía adoraba. Comenzaron a hablar sobre sus canciones favoritas, conciertos a los que querían asistir y cómo la música les ayudaba a superar los momentos difíciles.
  
@@ -123,12 +150,15 @@ Pero lentamente, las conversaciones empezaron a tomar un giro extraño. Melodía
 3-Dejar de hablar con Melody96.
 4-Hablar con un adulto
  
-</tw-passagedata><tw-passagedata pid="10" name=" Ignorar Melodia96" tags="" position="475,775" size="100,100">Lucía dejó de hablar con Melodia96. Melodia96 insistió, llegando incluso a enviar algunos mensajes agresivos. Lucia lo bloqueó para no recibir más mensajes. Pero esto no fue suficiente para que se sintiera mejor.
+</tw-passagedata><tw-passagedata pid="10" name=" Ignorar Melodia96" tags="" position="425,800" size="100,100">Lucía dejó de hablar con Melodia96. Melodia96 insistió, llegando incluso a enviar algunos mensajes agresivos. Lucia lo bloqueó para no recibir más mensajes. Pero esto no fue suficiente para que se sintiera mejor.
  
-[[Lucia decidió hablar con un adulto -&gt; Hablar con un adulto]] 
-</tw-passagedata><tw-passagedata pid="11" name=" Decirle a Melodia96" tags="" position="500,1000" size="100,100">Después de que Lucia le escribió, Melodia96 dejó de responder y desapareció del foro. Lucia se sintió decepcionada, pero aunque nunca sabría la verdad, entendió que ella había hecho lo correcto, protegiéndose.
+[[Lucia decidió hablar con un adulto -&gt; Hablar con alguien]] 
+</tw-passagedata><tw-passagedata pid="11" name=" Decirle a Melodia96" tags="" position="450,1000" size="100,100">Después de que Lucia le escribió, Melodia96 dejó de responder y desapareció del foro. Lucia se sintió decepcionada, pero aunque nunca sabría la verdad, entendió que ella había hecho lo correcto, protegiéndose.
 
 
+
+(b4r-colour:green)+(b4r:&quot;outset&quot;)+(b4r-size:5)
+[&lt;div class=&quot;cuestionario-fondo&quot;&gt;&lt;div class=&quot;cuestionario-texto&quot;&gt;
 Cuestionario Final:
 
 ¿Teniendo en cuenta el rol del AT, que estrategias se pueden utilizar para abordar dicha problemática? Explicar.
@@ -140,8 +170,12 @@ Cuestionario Final:
 ¿Ante la posibilidad de dialogar con Lucia, desde un lugar del AT o personal, que le dirían? 
 
 ¿A modo de cierre, como se sintieron durante el recorrido de la historia interactiva? ¿ Qué emociones pudieron vivenciar?
+]
+&lt;/div&gt;
+&lt;/div&gt;
 
-[[Empezar-&gt;Historias]]</tw-passagedata><tw-passagedata pid="12" name=" Reto de selfies" tags="" position="975,400" size="100,100">Lucas es conocido entre sus amigos por sus trucos en su bicicleta. Un día, mientras navegaba por sus redes sociales, se topó con un nuevo desafío viral: el &quot;Desafío de la Selfie Extrema&quot;. Consistía en tomarse una selfie en el lugar más peligroso que uno pudiera encontrar.
+
+[[Historias-&gt;Historias]]</tw-passagedata><tw-passagedata pid="12" name=" Reto de selfies" tags="" position="975,400" size="100,100">Lucas es conocido entre sus amigos por sus trucos en su bicicleta. Un día, mientras navegaba por sus redes sociales, se topó con un nuevo desafío viral: el &quot;Desafío de la Selfie Extrema&quot;. Consistía en tomarse una selfie en el lugar más peligroso que uno pudiera encontrar.
  
 Sus amigos ya habían comenzado a participar, y las fotos recibían cientos de &quot;likes&quot; y comentarios. Sintiendo la presión de no quedarse atrás, Lucas decidió que debía unirse al reto.
  
@@ -167,11 +201,11 @@ En ese momento, Lucas se detuvo y pensó en los riesgos de lo que estaba por hac
  
 [[Después de pensarlo, Lucas decidió hacer otro tipo de fotos -&gt; Hacer otras fotos]]
 [[Hablando con su hermana mayor, Lucas tomó otra decisión. -&gt; Prevencion]] 
-</tw-passagedata><tw-passagedata pid="15" name=" Hacer otras fotos" tags="" position="750,1000" size="100,100">Lucas, después de pensarlo mejor, decidió que el desafío era demasiado peligroso. En lugar de arriesgar su vida, optó por invitar a sus amigos a crear una serie de videos de trucos en bicicleta que compartió en sus redes sociales. Sus habilidades y creatividad recibieron elogios, y aunque no era parte del desafío original, Lucas y sus amigos demostraron que podían destacarse sin poner su vida en riesgo.
+</tw-passagedata><tw-passagedata pid="15" name=" Hacer otras fotos" tags="" position="650,1000" size="100,100">Lucas, después de pensarlo mejor, decidió que el desafío era demasiado peligroso. En lugar de arriesgar su vida, optó por invitar a sus amigos a crear una serie de videos de trucos en bicicleta que compartió en sus redes sociales. Sus habilidades y creatividad recibieron elogios, y aunque no era parte del desafío original, Lucas y sus amigos demostraron que podían destacarse sin poner su vida en riesgo.
  
-[[Empezar-&gt;Historias]]</tw-passagedata><tw-passagedata pid="16" name=" Prevencion" tags="" position="975,1000" size="100,100">Lucas decidió hablar con su hermana mayor, Marta, sobre el desafío. Marta, preocupada, le explicó los peligros y las posibles consecuencias. Juntos, idearon una campaña en redes sociales para concienciar a otros adolescentes sobre los riesgos de estos desafíos peligrosos. La campaña se volvió viral, y Lucas recibió reconocimiento por su valentía al hablar sobre el tema y por ayudar a prevenir accidentes entre sus compañeros.
+[[Empezar-&gt;Historias]]</tw-passagedata><tw-passagedata pid="16" name=" Prevencion" tags="" position="900,1000" size="100,100">Lucas decidió hablar con su hermana mayor, Marta, sobre el desafío. Marta, preocupada, le explicó los peligros y las posibles consecuencias. Juntos, idearon una campaña en redes sociales para concienciar a otros adolescentes sobre los riesgos de estos desafíos peligrosos. La campaña se volvió viral, y Lucas recibió reconocimiento por su valentía al hablar sobre el tema y por ayudar a prevenir accidentes entre sus compañeros.
  
-[[Empezar-&gt;Historias]]</tw-passagedata><tw-passagedata pid="17" name=" Oferta Irresistible" tags="" position="1275,400" size="100,100">Ana era una joven de diecisiete años apasionada por la moda. Siempre estaba al tanto de las últimas tendencias y soñaba con tener un guardarropa lleno de ropa de diseñadores famosos. Un día, mientras navegaba por las redes sociales, se encontró con una oferta increíble: un sitio web vendía productos de marcas de lujo a precios ridículamente bajos. Bolsos de diseñador, zapatos y ropa, todo a una fracción de su costo habitual.
+[[Empezar-&gt;Historias]]</tw-passagedata><tw-passagedata pid="17" name=" Oferta Irresistible" tags="" position="1300,400" size="100,100">Ana era una joven de diecisiete años apasionada por la moda. Siempre estaba al tanto de las últimas tendencias y soñaba con tener un guardarropa lleno de ropa de diseñadores famosos. Un día, mientras navegaba por las redes sociales, se encontró con una oferta increíble: un sitio web vendía productos de marcas de lujo a precios ridículamente bajos. Bolsos de diseñador, zapatos y ropa, todo a una fracción de su costo habitual.
  
 Intrigada, Ana decidió explorar la página web. Las fotos de los productos eran deslumbrantes, y los comentarios de los compradores parecían genuinos y entusiastas. Sin embargo, algo en su interior le decía que esto era demasiado bueno para ser verdad. Después de agregar varios artículos a su carrito, Ana se detuvo un momento y verdad.
  
@@ -182,7 +216,7 @@ Intrigada, Ana decidió explorar la página web. Las fotos de los productos eran
 [[Investigar más sobre la tienda online -&gt; Investigar]]
 [[Consultar con un adulto de confianza -&gt; Consultar]]
 [[Buscar la misma oferta en tiendas autorizadas -&gt; Tienda autorizada]]
-</tw-passagedata><tw-passagedata pid="18" name=" Fotografia" tags="" position="375,375" size="100,100">
+</tw-passagedata><tw-passagedata pid="18" name=" Fotografia" tags="" position="350,400" size="100,100">
 Sofía era una chica de quince años. Le encantaba la fotografía y tenía una cuenta en una red social donde compartía sus imágenes favoritas. Con cada &quot;like&quot; y comentario positivo, su confianza crecía, y su amor por la fotografía se profundizaba.
 
 
@@ -207,7 +241,7 @@ Un día, Sofía subió una foto que había tomado en el parque, una imagen de un
 [[Ana decidio consultar con un adulto de confianza -&gt; Consultar]] 
 
 
-</tw-passagedata><tw-passagedata pid="20" name=" Investigar" tags="" position="1175,1000" size="100,100">Ana decidió tomarse un momento para investigar más sobre el sitio web. Buscó reseñas en otras plataformas y descubrió numerosos testimonios de personas que habían sido estafadas por la misma tienda. También encontró artículos que alertaban sobre las prácticas fraudulentas de dicho sitio. Decidió no realizar la compra y se sintió aliviada de haber evitado una trampa.
+</tw-passagedata><tw-passagedata pid="20" name=" Investigar" tags="" position="1100,1000" size="100,100">Ana decidió tomarse un momento para investigar más sobre el sitio web. Buscó reseñas en otras plataformas y descubrió numerosos testimonios de personas que habían sido estafadas por la misma tienda. También encontró artículos que alertaban sobre las prácticas fraudulentas de dicho sitio. Decidió no realizar la compra y se sintió aliviada de haber evitado una trampa.
  
 
 
@@ -245,7 +279,31 @@ Carlos decidió
 
 [[Empezar-&gt;Historias]]</tw-passagedata><tw-passagedata pid="27" name=" Profesional de Salud" tags="" position="1800,1000" size="100,100">Carlos decidió pedir una cita con su médico para hablar sobre el suplemento. Su médico le explicó los riesgos asociados con tomar productos no aprobados y le recomendó opciones seguras y efectivas para mejorar su rendimiento deportivo. Carlos comprendió la importancia de consultar a profesionales de la salud antes de probar cualquier nuevo producto o tratamiento.
  
-[[Empezar-&gt;Historias]]</tw-passagedata></tw-storydata>
+[[Empezar-&gt;Historias]]</tw-passagedata><tw-passagedata pid="28" name="Untitled Passage" tags="" position="75,175" size="100,100">
+
+
+Photo by Karolina Kaboompics: https://www.pexels.com/photo/abstract-background-with-turquoise-color-4040649/
+
+</tw-passagedata><tw-passagedata pid="29" name=" Hablar con alguien" tags="" position="300,1000" size="100,100">(b4r-colour:green)+(b4r:&quot;outset&quot;)+(b4r-size:5)
+[&lt;div class=&quot;cuestionario-fondo&quot;&gt;&lt;div class=&quot;cuestionario-texto&quot;&gt;
+Cuestionario Final:
+
+¿Teniendo en cuenta el rol del AT, que estrategias se pueden utilizar para abordar dicha problemática? Explicar.
+
+¿A partir de la historia presentada, que lugar ocupa la construcción de la identidad del adolescente? ¿Por qué?
+
+¿Qué relación tiene la problemática desarrollada con el concepto que expresa que los jóvenes son “Nativos Digitales”?
+
+¿Ante la posibilidad de dialogar con este adolescente, desde un lugar del AT o personal, que le dirían? 
+
+¿A modo de cierre, como se sintieron durante el recorrido de la historia interactiva?
+ Qué emociones pudieron vivenciar?
+]
+&lt;/div&gt;
+&lt;/div&gt;
+
+
+[[Historias-&gt;Historias]]</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
