--- a/DC-UBP-Actividad1.html
+++ b/DC-UBP-Actividad1.html
@@ -28,7 +28,7 @@ tw-passage img {
 
 
 tw-story {
- background-image:url("Backgrounds/bg-1.jpg");
+ background-image:url("bg-1.jpg");
  background-size:cover;
  background-color: white;
  color: black;
