--- a/DC-UBP-Actividad1.html
+++ b/DC-UBP-Actividad1.html
@@ -46,7 +46,8 @@ tw-story {
   padding-left: 10%;
   padding-right: 10%;
   padding-bottom: 5%;
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Introduccion" tags="" position="950,100" size="200,100">Introduccion a la actividad, consignas, como elegir opciones, etc.
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="Historia" color="green"></tw-tag><tw-passagedata pid="1" name="Introduccion" tags="" position="950,100" size="200,100">Hola!
+En esta actividad te invitamos a leer algunas historias sobre experiencias que algunos adolescentes pueden vivir cuando interactuan con otros en Internet. 
 
 
 [[Historias-&gt;Historias]]
@@ -147,13 +148,14 @@ Pero lentamente, las conversaciones empezaron a tomar un giro extraño. Melodía
 ¿Qué debería hacer Lucia?
  
  
-3-Dejar de hablar con Melody96.
-4-Hablar con un adulto
+[[Dejar de hablar con Melodia96 -&gt; Ignorar Melodia96]]
+[[Hablar con un adulto -&gt; Hablar con un adulto]] 
+
  
 </tw-passagedata><tw-passagedata pid="10" name=" Ignorar Melodia96" tags="" position="425,800" size="100,100">Lucía dejó de hablar con Melodia96. Melodia96 insistió, llegando incluso a enviar algunos mensajes agresivos. Lucia lo bloqueó para no recibir más mensajes. Pero esto no fue suficiente para que se sintiera mejor.
  
 [[Lucia decidió hablar con un adulto -&gt; Hablar con alguien]] 
-</tw-passagedata><tw-passagedata pid="11" name=" Decirle a Melodia96" tags="" position="450,1000" size="100,100">Después de que Lucia le escribió, Melodia96 dejó de responder y desapareció del foro. Lucia se sintió decepcionada, pero aunque nunca sabría la verdad, entendió que ella había hecho lo correcto, protegiéndose.
+</tw-passagedata><tw-passagedata pid="11" name=" Decirle a Melodia96" tags="" position="475,1000" size="100,100">Después de que Lucia le escribió, Melodia96 dejó de responder y desapareció del foro. Lucia se sintió decepcionada, pero aunque nunca sabría la verdad, entendió que ella había hecho lo correcto, protegiéndose.
 
 
 
@@ -203,9 +205,47 @@ En ese momento, Lucas se detuvo y pensó en los riesgos de lo que estaba por hac
 [[Hablando con su hermana mayor, Lucas tomó otra decisión. -&gt; Prevencion]] 
 </tw-passagedata><tw-passagedata pid="15" name=" Hacer otras fotos" tags="" position="650,1000" size="100,100">Lucas, después de pensarlo mejor, decidió que el desafío era demasiado peligroso. En lugar de arriesgar su vida, optó por invitar a sus amigos a crear una serie de videos de trucos en bicicleta que compartió en sus redes sociales. Sus habilidades y creatividad recibieron elogios, y aunque no era parte del desafío original, Lucas y sus amigos demostraron que podían destacarse sin poner su vida en riesgo.
  
-[[Empezar-&gt;Historias]]</tw-passagedata><tw-passagedata pid="16" name=" Prevencion" tags="" position="900,1000" size="100,100">Lucas decidió hablar con su hermana mayor, Marta, sobre el desafío. Marta, preocupada, le explicó los peligros y las posibles consecuencias. Juntos, idearon una campaña en redes sociales para concienciar a otros adolescentes sobre los riesgos de estos desafíos peligrosos. La campaña se volvió viral, y Lucas recibió reconocimiento por su valentía al hablar sobre el tema y por ayudar a prevenir accidentes entre sus compañeros.
+(b4r-colour:green)+(b4r:&quot;outset&quot;)+(b4r-size:5)
+[&lt;div class=&quot;cuestionario-fondo&quot;&gt;&lt;div class=&quot;cuestionario-texto&quot;&gt;
+Cuestionario Final:
+
+¿Teniendo en cuenta el rol del AT, que estrategias se pueden utilizar para abordar dicha problemática? Explicar.
+
+¿A partir de la historia presentada, que lugar ocupa la construcción de la identidad del adolescente? ¿Por qué?
+
+¿Qué relación tiene la problemática desarrollada con el concepto que expresa que los jóvenes son “Nativos Digitales”?
+
+¿Ante la posibilidad de dialogar con este adolescente, desde un lugar del AT o personal, que le dirían? 
+
+¿A modo de cierre, como se sintieron durante el recorrido de la historia interactiva?
+ Qué emociones pudieron vivenciar?
+]
+&lt;/div&gt;
+&lt;/div&gt;
+
+
+[[Historias-&gt;Historias]]</tw-passagedata><tw-passagedata pid="16" name=" Prevencion" tags="" position="900,1000" size="100,100">Lucas decidió hablar con su hermana mayor, Marta, sobre el desafío. Marta, preocupada, le explicó los peligros y las posibles consecuencias. Juntos, idearon una campaña en redes sociales para informar a otros adolescentes sobre los riesgos de estos desafíos peligrosos. La campaña se volvió viral, y Lucas recibió reconocimiento por su valentía al hablar sobre el tema y por ayudar a prevenir accidentes entre sus compañeros.
  
-[[Empezar-&gt;Historias]]</tw-passagedata><tw-passagedata pid="17" name=" Oferta Irresistible" tags="" position="1300,400" size="100,100">Ana era una joven de diecisiete años apasionada por la moda. Siempre estaba al tanto de las últimas tendencias y soñaba con tener un guardarropa lleno de ropa de diseñadores famosos. Un día, mientras navegaba por las redes sociales, se encontró con una oferta increíble: un sitio web vendía productos de marcas de lujo a precios ridículamente bajos. Bolsos de diseñador, zapatos y ropa, todo a una fracción de su costo habitual.
+(b4r-colour:green)+(b4r:&quot;outset&quot;)+(b4r-size:5)
+[&lt;div class=&quot;cuestionario-fondo&quot;&gt;&lt;div class=&quot;cuestionario-texto&quot;&gt;
+Cuestionario Final:
+
+¿Teniendo en cuenta el rol del AT, que estrategias se pueden utilizar para abordar dicha problemática? Explicar.
+
+¿A partir de la historia presentada, que lugar ocupa la construcción de la identidad del adolescente? ¿Por qué?
+
+¿Qué relación tiene la problemática desarrollada con el concepto que expresa que los jóvenes son “Nativos Digitales”?
+
+¿Ante la posibilidad de dialogar con este adolescente, desde un lugar del AT o personal, que le dirían? 
+
+¿A modo de cierre, como se sintieron durante el recorrido de la historia interactiva?
+ Qué emociones pudieron vivenciar?
+]
+&lt;/div&gt;
+&lt;/div&gt;
+
+
+[[Historias-&gt;Historias]]</tw-passagedata><tw-passagedata pid="17" name=" Oferta Irresistible" tags="" position="1300,400" size="100,100">Ana era una joven de diecisiete años apasionada por la moda. Siempre estaba al tanto de las últimas tendencias y soñaba con tener un guardarropa lleno de ropa de diseñadores famosos. Un día, mientras navegaba por las redes sociales, se encontró con una oferta increíble: un sitio web vendía productos de marcas de lujo a precios ridículamente bajos. Bolsos de diseñador, zapatos y ropa, todo a una fracción de su costo habitual.
  
 Intrigada, Ana decidió explorar la página web. Las fotos de los productos eran deslumbrantes, y los comentarios de los compradores parecían genuinos y entusiastas. Sin embargo, algo en su interior le decía que esto era demasiado bueno para ser verdad. Después de agregar varios artículos a su carrito, Ana se detuvo un momento y verdad.
  
@@ -245,15 +285,72 @@ Un día, Sofía subió una foto que había tomado en el parque, una imagen de un
  
 
 
-[[Empezar-&gt;Historias]]</tw-passagedata><tw-passagedata pid="21" name=" Consultar" tags="" position="1325,1000" size="100,100">Ana decidió hablar con su madre sobre la oferta. Su madre le sugirió que revisara la política de devoluciones y buscara información sobre la autenticidad del sitio. Juntas, descubrieron que el sitio no tenía políticas claras ni información de contacto confiable. 
+(b4r-colour:green)+(b4r:&quot;outset&quot;)+(b4r-size:5)
+[&lt;div class=&quot;cuestionario-fondo&quot;&gt;&lt;div class=&quot;cuestionario-texto&quot;&gt;
+Cuestionario Final:
+
+¿Teniendo en cuenta el rol del AT, que estrategias se pueden utilizar para abordar dicha problemática? Explicar.
+
+¿A partir de la historia presentada, que lugar ocupa la construcción de la identidad del adolescente? ¿Por qué?
+
+¿Qué relación tiene la problemática desarrollada con el concepto que expresa que los jóvenes son “Nativos Digitales”?
+
+¿Ante la posibilidad de dialogar con este adolescente, desde un lugar del AT o personal, que le dirían? 
+
+¿A modo de cierre, como se sintieron durante el recorrido de la historia interactiva?
+ Qué emociones pudieron vivenciar?
+]
+&lt;/div&gt;
+&lt;/div&gt;
+
+
+[[Historias-&gt;Historias]]</tw-passagedata><tw-passagedata pid="21" name=" Consultar" tags="" position="1325,1000" size="100,100">Ana decidió hablar con su madre sobre la oferta. Su madre le sugirió que revisara la política de devoluciones y buscara información sobre la autenticidad del sitio. Juntas, descubrieron que el sitio no tenía políticas claras ni información de contacto confiable. 
 
 Además de la decepción de que los productos y el sitio no fueran de confianza, la madre de Ana le explicó que al llenar un formulario o hacer un pago  estamos compartiendo información personal y exponiéndonos a posibles estafas. 
 Ana aprendió a ser más prudente y valorar la opinión de los adultos.
 
 
-[[Empezar-&gt;Historias]]</tw-passagedata><tw-passagedata pid="22" name=" Tienda autorizada" tags="" position="1475,1000" size="100,100">Ana decidió buscar los mismos productos en sitios web autorizados y tiendas de renombre. Aunque los precios eran más altos, encontró una tienda online que tenía una oferta razonable y descuentos legítimos. Decidió comprar solo un artículo para probar la tienda. Cuando recibió el producto, era auténtico y de alta calidad. Ana comprendió que a veces vale la pena pagar un poco más por la garantía de autenticidad y buena calidad.
+(b4r-colour:green)+(b4r:&quot;outset&quot;)+(b4r-size:5)
+[&lt;div class=&quot;cuestionario-fondo&quot;&gt;&lt;div class=&quot;cuestionario-texto&quot;&gt;
+Cuestionario Final:
 
-[[Empezar-&gt;Historias]]</tw-passagedata><tw-passagedata pid="23" name=" Noticias" tags="" position="1650,400" size="100,100">Carlos era un chico de dieciséis años apasionado por el deporte. Siempre buscaba maneras de mejorar su rendimiento y mantenerse saludable. Un día, mientras navegaba por sus redes sociales, se encontró con una noticia que captó su atención: &quot;Nuevo suplemento vitamínico para mejorar el rendimiento deportivo&quot;.
+¿Teniendo en cuenta el rol del AT, que estrategias se pueden utilizar para abordar dicha problemática? Explicar.
+
+¿A partir de la historia presentada, que lugar ocupa la construcción de la identidad del adolescente? ¿Por qué?
+
+¿Qué relación tiene la problemática desarrollada con el concepto que expresa que los jóvenes son “Nativos Digitales”?
+
+¿Ante la posibilidad de dialogar con este adolescente, desde un lugar del AT o personal, que le dirían? 
+
+¿A modo de cierre, como se sintieron durante el recorrido de la historia interactiva?
+ Qué emociones pudieron vivenciar?
+]
+&lt;/div&gt;
+&lt;/div&gt;
+
+
+[[Historias-&gt;Historias]]</tw-passagedata><tw-passagedata pid="22" name=" Tienda autorizada" tags="" position="1475,1000" size="100,100">Ana decidió buscar los mismos productos en sitios web autorizados y tiendas de renombre. Aunque los precios eran más altos, encontró una tienda online que tenía una oferta razonable y descuentos legítimos. Decidió comprar solo un artículo para probar la tienda. Cuando recibió el producto, era auténtico y de alta calidad. Ana comprendió que a veces vale la pena pagar un poco más por la garantía de autenticidad y buena calidad.
+
+(b4r-colour:green)+(b4r:&quot;outset&quot;)+(b4r-size:5)
+[&lt;div class=&quot;cuestionario-fondo&quot;&gt;&lt;div class=&quot;cuestionario-texto&quot;&gt;
+Cuestionario Final:
+
+¿Teniendo en cuenta el rol del AT, que estrategias se pueden utilizar para abordar dicha problemática? Explicar.
+
+¿A partir de la historia presentada, que lugar ocupa la construcción de la identidad del adolescente? ¿Por qué?
+
+¿Qué relación tiene la problemática desarrollada con el concepto que expresa que los jóvenes son “Nativos Digitales”?
+
+¿Ante la posibilidad de dialogar con este adolescente, desde un lugar del AT o personal, que le dirían? 
+
+¿A modo de cierre, como se sintieron durante el recorrido de la historia interactiva?
+ Qué emociones pudieron vivenciar?
+]
+&lt;/div&gt;
+&lt;/div&gt;
+
+
+[[Historias-&gt;Historias]]</tw-passagedata><tw-passagedata pid="23" name=" Noticias" tags="" position="1650,400" size="100,100">Carlos era un chico de dieciséis años apasionado por el deporte. Siempre buscaba maneras de mejorar su rendimiento y mantenerse saludable. Un día, mientras navegaba por sus redes sociales, se encontró con una noticia que captó su atención: &quot;Nuevo suplemento vitamínico para mejorar el rendimiento deportivo&quot;.
  
 La noticia, acompañada de testimonios impresionantes y fotos de antes y después, afirmaba que el suplemento había sido descubierto por científicos y aprobado por médicos. Sin embargo, Carlos se preguntó si algo tan bueno podría ser cierto. A pesar de sus dudas, la promesa de mejorar su rendimiento era tentadora.
  
@@ -274,12 +371,69 @@ Carlos decidió
 [[Buscar la opinión de un profesional de la salud -&gt; Profesional de Salud]] 
 </tw-passagedata><tw-passagedata pid="25" name=" Investigar el proucto" tags="" position="1650,1000" size="100,100">Carlos decidió investigar más antes de hacer la compra. Encontró artículos y reseñas en línea que desacreditaban la noticia y el suplemento, etiquetándolo como una estafa. También descubrió que la página que promovía el suplemento tenía muchas quejas de consumidores. Decidió no comprar el producto y optó por seguir su régimen de entrenamiento y dieta saludable comprobada.
  
-[[Empezar-&gt;Historias]]</tw-passagedata><tw-passagedata pid="26" name=" Consultar con su entrenador" tags="" position="1950,1000" size="100,100">Carlos decidió hablar con su entrenador sobre el suplemento. Su entrenador, con experiencia en nutrición deportiva, le explicó que muchos suplementos milagrosos son fraudulentos y potencialmente peligrosos. Le recomendó fuentes confiables para obtener información sobre salud y nutrición. Carlos aprendió a valorar la opinión de los expertos y a ser más cauteloso con la información en línea.
+(b4r-colour:green)+(b4r:&quot;outset&quot;)+(b4r-size:5)
+[&lt;div class=&quot;cuestionario-fondo&quot;&gt;&lt;div class=&quot;cuestionario-texto&quot;&gt;
+Cuestionario Final:
+
+¿Teniendo en cuenta el rol del AT, que estrategias se pueden utilizar para abordar dicha problemática? Explicar.
+
+¿A partir de la historia presentada, que lugar ocupa la construcción de la identidad del adolescente? ¿Por qué?
+
+¿Qué relación tiene la problemática desarrollada con el concepto que expresa que los jóvenes son “Nativos Digitales”?
+
+¿Ante la posibilidad de dialogar con este adolescente, desde un lugar del AT o personal, que le dirían? 
+
+¿A modo de cierre, como se sintieron durante el recorrido de la historia interactiva?
+ Qué emociones pudieron vivenciar?
+]
+&lt;/div&gt;
+&lt;/div&gt;
 
 
-[[Empezar-&gt;Historias]]</tw-passagedata><tw-passagedata pid="27" name=" Profesional de Salud" tags="" position="1800,1000" size="100,100">Carlos decidió pedir una cita con su médico para hablar sobre el suplemento. Su médico le explicó los riesgos asociados con tomar productos no aprobados y le recomendó opciones seguras y efectivas para mejorar su rendimiento deportivo. Carlos comprendió la importancia de consultar a profesionales de la salud antes de probar cualquier nuevo producto o tratamiento.
+[[Historias-&gt;Historias]]</tw-passagedata><tw-passagedata pid="26" name=" Consultar con su entrenador" tags="" position="1950,1000" size="100,100">Carlos decidió hablar con su entrenador sobre el suplemento. Su entrenador, con experiencia en nutrición deportiva, le explicó que muchos suplementos milagrosos son fraudulentos y potencialmente peligrosos. Le recomendó fuentes confiables para obtener información sobre salud y nutrición. Carlos aprendió a valorar la opinión de los expertos y a ser más cauteloso con la información en línea.
+
+
+(b4r-colour:green)+(b4r:&quot;outset&quot;)+(b4r-size:5)
+[&lt;div class=&quot;cuestionario-fondo&quot;&gt;&lt;div class=&quot;cuestionario-texto&quot;&gt;
+Cuestionario Final:
+
+¿Teniendo en cuenta el rol del AT, que estrategias se pueden utilizar para abordar dicha problemática? Explicar.
+
+¿A partir de la historia presentada, que lugar ocupa la construcción de la identidad del adolescente? ¿Por qué?
+
+¿Qué relación tiene la problemática desarrollada con el concepto que expresa que los jóvenes son “Nativos Digitales”?
+
+¿Ante la posibilidad de dialogar con este adolescente, desde un lugar del AT o personal, que le dirían? 
+
+¿A modo de cierre, como se sintieron durante el recorrido de la historia interactiva?
+ Qué emociones pudieron vivenciar?
+]
+&lt;/div&gt;
+&lt;/div&gt;
+
+
+[[Historias-&gt;Historias]]</tw-passagedata><tw-passagedata pid="27" name=" Profesional de Salud" tags="" position="1800,1000" size="100,100">Carlos decidió pedir una cita con su médico para hablar sobre el suplemento. Su médico le explicó los riesgos asociados con tomar productos no aprobados y le recomendó opciones seguras y efectivas para mejorar su rendimiento deportivo. Carlos comprendió la importancia de consultar a profesionales de la salud antes de probar cualquier nuevo producto o tratamiento.
  
-[[Empezar-&gt;Historias]]</tw-passagedata><tw-passagedata pid="28" name="Untitled Passage" tags="" position="75,175" size="100,100">
+(b4r-colour:green)+(b4r:&quot;outset&quot;)+(b4r-size:5)
+[&lt;div class=&quot;cuestionario-fondo&quot;&gt;&lt;div class=&quot;cuestionario-texto&quot;&gt;
+Cuestionario Final:
+
+¿Teniendo en cuenta el rol del AT, que estrategias se pueden utilizar para abordar dicha problemática? Explicar.
+
+¿A partir de la historia presentada, que lugar ocupa la construcción de la identidad del adolescente? ¿Por qué?
+
+¿Qué relación tiene la problemática desarrollada con el concepto que expresa que los jóvenes son “Nativos Digitales”?
+
+¿Ante la posibilidad de dialogar con este adolescente, desde un lugar del AT o personal, que le dirían? 
+
+¿A modo de cierre, como se sintieron durante el recorrido de la historia interactiva?
+ Qué emociones pudieron vivenciar?
+]
+&lt;/div&gt;
+&lt;/div&gt;
+
+
+[[Historias-&gt;Historias]]</tw-passagedata><tw-passagedata pid="28" name="Untitled Passage" tags="" position="75,175" size="100,100">
 
 
 Photo by Karolina Kaboompics: https://www.pexels.com/photo/abstract-background-with-turquoise-color-4040649/
